plot signal attempt2.