@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import org.jooq.DSLContext;
 import org.springframework.stereotype.Repository;
 import ru.grnk.tradevisor.dbmodel.tables.MarketData;
+import ru.grnk.tradevisor.dbmodel.tables.Signals;
 import ru.grnk.tradevisor.dbmodel.tables.Tickers;
 
 import java.util.List;
@@ -16,19 +17,24 @@ public class PlotRepository {
     private final DSLContext dsl;
 
     public List<PlotRecord> getTickerPlotInfo(String uuid) {
-        return dsl.select(
+        var ohlcd =  dsl.select(
                 MarketData.MARKET_DATA.OPEN,
                 MarketData.MARKET_DATA.HIGH,
                 MarketData.MARKET_DATA.LOW,
                 MarketData.MARKET_DATA.CLOSE,
-                Tickers.TICKERS.TICKER,
-                Tickers.TICKERS.FIGI,
-                Tickers.TICKERS.UUID,
                 MarketData.MARKET_DATA.TIME
-                ).from(Tickers.TICKERS.join(MarketData.MARKET_DATA)
-                .on(Tickers.TICKERS.UUID.eq(MarketData.MARKET_DATA.INSTRUMENT_UUID)))
-                .where(Tickers.TICKERS.UUID.eq(uuid))
-                .fetchStreamInto(PlotRecord.class)
-                .collect(Collectors.toList());
+                ).from(MarketData.MARKET_DATA)
+                .where(MarketData.MARKET_DATA.INSTRUMENT_UUID.eq(uuid))
+                .fetchStreamInto(OHLCData.class)
+                .toList();
+
+        var tickerInfo = dsl.select(
+                Tickers.TICKERS.TICKER,
+                Tickers.TICKERS.UUID
+        );
+
+
+
+        return List.of();
     }
 }
